add: add demo auth
